--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,10 +1,26 @@
+server:
+  port: 8082
+
 spring:
   application:
-    name: activityservice
+    name: ACTIVITY-SERVICE
+
   data:
     mongodb:
       uri: mongodb://localhost:27017/fitnessactivity
       database: fitnessactivity
 
-server:
-  port: 8082
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
+
+# по желанию
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    reactor.netty.http.client: INFO   # если дебажишь webclient — поднимай до DEBUG
